<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="NavigationActivity">
    <group android:checkableBehavior="single">

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/menu_notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification" />

    <item
        android:id="@+id/menu_update"
        android:icon="@drawable/ic_update"
        android:title="@string/update" />


    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />

    <item
        android:id="@+id/menu_rating"
        android:icon="@drawable/ic_rate"
        android:title="@string/rating" />

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_about"
        android:title="@string/about_us" />

    </group>

</menu>